--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,hbs,css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "nodemon": "^3.0.1",
     "postman-request": "^2.88.1-postman.33"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
